Corrected button wrapping text for 'Testing' button

--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,7 @@ header .container {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    width: 100%;
 }
 
 header :is(h1, h2, h3, h4, h5, h6, a) {
@@ -54,7 +55,6 @@ header nav a {
     display: block;
     text-align: center;
 }
-
 
 .overview-hero {
     background-color: #E2E8F0;
@@ -141,6 +141,8 @@ header nav a {
 
 .testing .btn {
     background-color: #48BB78;
+    white-space: nowrap;
+    text-transform: uppercase;
 }
 
 .newsletter .btn {
